# LeetCode-Practice

./: .gitignore  CMakeLists.txt  README.md  download_Platform.sh  lc0021_license_key_formatting.cpp  lc0021_license_key_formatting.h  lc0583_delete_operation_for_two_strings.cpp  lc0639_decode_ways_ii.cpp  lc0639_decode_ways_ii.h  lc0725_split_linked_list_in_parts.cpp  main.cpp
LeetCode/: CMakeLists.txt
LeetCode/inc/: lc0004_median_of_two_sorted_arrays.h  lc0005_longest_palindromic_substring.h  lc0008_string_to_integer_atoi.h  lc0015_3_sum.h  lc0033_search_in_rotated_sorted_array.h  lc0036_valid_sudoku.h  lc0038_count_and_say.h  lc0044_wildcard_matching.h  lc0052_n_queens_ii.h  lc0064_minimum_path_sum.h  lc0068_text_justification.h  lc0084_largest_rectangle_in_histogram.h  lc0093_restore_ip_addresses.h  lc0138_copy_list_with_random_pointer.h  lc0149_max_points_on_a_line.h  lc0162_find_peak_element.h  lc0165_compare_version_numbers.h  lc0168_excel_sheet_column_title.h  lc0179_largest_number.h  lc0187_repeated_dna_sequences.h  lc0198_house_robber.h  lc0208_implement_trie_prefix_tree.h  lc0212_word_search_ii.h  lc0225_implement_stack_using_queues.h  lc0227_basic_calculator_ii.h  lc0233_number_of_digit_one.h  lc0240_search_a_2d_matrix_ii.h  lc0266_fraction_to_recurring_decimal.h  lc0273_integer_to_english_words.h  lc0274_h_index.h  lc0275_h_index_ii.h  lc0279_perfect_squares.h  lc0284_peeking_iterator.h  lc0295_find_median_from_data_stream.h  lc0297_serialize_and_deserialize_binary_tree.h  lc0299_bulls_and_cows.h  lc0300_longest_increasing_subsequence.h  lc0306_additive_number.h  lc0306_increasing_triplet_subsequence.h  lc0368_largest_divisible_subset.h  (+49 more)
LeetCode/include/: lc0006_zig_zag_conversion.h  lc0007_reverse_integer.h  lc0008_string_to_integer_atoi.h  lc0009_palindrome_number.h  lc0010_rugular_expression_matching.h  lc0011_container_with_most_water.h  lc0042_trapping_rain_water.h  lc0045_jump_game_ii.h  lc0051_n_queen.h  lc0051_n_queens.h  lc0052_n_queens_ii.h  lc0054_spiral_order_matrix_i.h  lc0055_jump_game.h  lc0059_spiral_order_matirx_ii.h  lc0064_minimum_path_sum.h  lc0079_word_search.h  lc0084_largest_rectangle_in_histogram.h  lc0094_binary_tree_inorder_traversal.h  lc0130_surrounded_regions.h  lc0149_max_points_on_a_line.h  lc0168_excel_sheet_column_title.h  lc0200_number_of_islands.h  lc0275_h_index_ii.h  lc0297_serialize_and_deserialize_binary_tree.h  lc0451_sort_characters_by_frequency.h  lc0457_circular_array_loop.h  lc0523_continuous_subarray_sum.h  lc0621_task_scheduler.h  lc0645_set_mismatch.h  lc0726_number_of_atoms.h  lc0752_open_the_lock.h  lc0773_sliding_puzzle.h  lc0815_bus_routes.h  lc0909_snakes_and_ladders.h  lc0930_binary_subarrays_with_sum.h  lc0981_time_based_key_value_store.h  lc0994_rotting_oranges.h  lc1418_display_table_of_food_orders_in_a_restaurant.h  lc1711_count_good_meals.h  lc1744_can_you_eat_your_favorite_candy_on_your_favorite_day.h  (+1 more)
LeetCode/src/: lc0004_median_of_two_sorted_arrays.cpp  lc0005_longest_palindromic_substring.cpp  lc0006_zig_zag_conversion.cpp  lc0007_reverse_integer.cpp  lc0008_string_to_integer_atoi.cpp  lc0009_palindrome_number.cpp  lc0010_rugular_expression_matching.cpp  lc0011_container_with_most_water.cpp  lc0015_3_um.cpp  lc0033_search_in_rotated_sorted_array.cpp  lc0036_valid_sudoku.cpp  lc0038_count_and_say.cpp  lc0042_trapping_rain_water.cpp  lc0044_wildcard_matching.cpp  lc0045_jump_game_ii.cpp  lc0051_n_queen.cpp  lc0051_n_queens.cpp  lc0052_n_queens_ii.cpp  lc0054_spiral_order_matrix_i.cpp  lc0055_jump_game.cpp  lc0059_spiral_order_matrix_ii.cpp  lc0064_minimum_path_sum.cpp  lc0068_text_justification.cpp  lc0079_word_search.cpp  lc0084_largest_rectangle_in_histogram.cpp  lc0093_restore_ip_addresses.cpp  lc0094_binary_tree_inorder_traversal.cpp  lc0198_house_robber.cpp  (+85 more)
Main/: CMakeLists.txt  create_file.sh  main.cpp
Tools/: CMakeLists.txt  build_tool.sh
Tools/code_file/: CMakeLists.txt
Tools/code_file/inc/: code_file.h  inc_file.h  src_file.h
Tools/code_file/src/: code_file.cpp  inc_file.cpp  src_file.cpp
Tools/create_file/: cpp_file.cpp  cpp_file.h  file_head.cpp  file_head.h  main.cpp
Tools/create_file/inc/: cpp_file.h  file_head.h
Tools/create_file/src/: cpp_file.cpp  file_head.cpp  main.cpp
Tools/inc/: src_file.h
Tools/leetcode_file/: CMakeLists.txt
Tools/leetcode_file/inc/: code_file.h  inc_file.h  leetcode_file.h  src_file.h
Tools/leetcode_file/src/: code_file.cpp  inc_file.cpp  leetcode_file.cpp  main.cpp  src_file.cpp
Tools/src/: src_file.cpp
cmake/: mac_toolchain.cmake  toolchain.cmake  win_toolchain.cmake
doc/: 总结.txt
google_test/: CMakeLists.txt
include/: Pointer.h  lc0005_longest_palindromic_substring.h  lc0006_zig_zag_conversion.h  lc0007_reverse_integer.h  lc0008_string_to_integer_atoi.h  lc0009_palindrome_number.h  lc0010_rugular_expression_matching.h  lc0044_wildcard_matching.h  lc0045_jump_game_ii.h  lc0054_spiral_order_matrix_i.h  lc0059_spiral_order_matirx_ii.h  lc0094_binary_tree_inorder_traversal.h  lc0406_queue_reconstruction_by_height.h  lc0621_task_scheduler.h  lc1744_can_you_eat_your_favorite_candy_on_your_favorite_day.h  public_function.h
public_function/: CMakeLists.txt
script/: cmake_build.sh  cmake_clean.sh  cmake_config.sh  create_all_inc.sh  init_env.sh  move_file.sh
src/: CMakeLists.txt  lc0005_longest_palindromic_substring.cpp  lc0006_zig_zag_conversion.cpp  lc0007_reverse_integer.cpp  lc0008_string_to_integer_atoi.cpp  lc0009_palindrome_number.cpp  lc0010_rugular_expression_matching.cpp  lc0011_container_with_most_water.cpp  lc0054_spiral_order_matrix_i.cpp  lc0055_jump_game.cpp  lc0059_spiral_order_matrix_ii.cpp  lc0094_binary_tree_inorder_traversal.cpp  lc0406_queue_reconstruction_by_height.cpp  lc1744_can_you_eat_your_favorite_candy_on_your_favorite_day.cpp  main.cpp  public_function.cpp
(+7 files in other folders)
