project(LeetCode)
cmake_minimum_required(VERSION 3.4.1)

set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/bin)
set(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/lib)
set(CMAKE_ROOT_PATH     ${CMAKE_CURRENT_SOURCE_DIR})
set(CMAKE_CXX_STANDARD 17)

set(MAIN_PATH           ${CMAKE_CURRENT_SOURCE_DIR}/Main)
set(LEETCODE_PATH       ${CMAKE_CURRENT_SOURCE_DIR}/LeetCode)
set(PUBLIC_FUNC_PATH    ${CMAKE_CURRENT_SOURCE_DIR}/public_function)

set(GOOGLE_TEST_PATH    ${CMAKE_CURRENT_SOURCE_DIR}/lib/google_test)

add_subdirectory(${MAIN_PATH})
